Backported every class with full functionality